--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="src" path="compile-libs"/>
+	<classpathentry exported="true" kind="lib" path="libs/androidannotations-api-2.7.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
